WorkShop_2.3_Ingress_Network/apisix/referencegrant-tls-secrets.yml
# Allows the Gateway in the "gatewayapi-apisix" namespace to reference TLS Secrets
# (webtest1secret, webtest2secret) that live in the "default" namespace.
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-apisix-gateway-to-default-secrets
  namespace: default
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gatewayapi-apisix
  to:
  - group: ""
    kind: Secret
