WorkShop_2.3_Ingress_Network/apisix/apisix-httproute-webtest1.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webtest1-httproute
spec:
  parentRefs:
  - name: apisix
    namespace: apisix
  hostnames:
  - webtest1.kuberneteslabthailand.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: webtest1
      kind: Service
      port: 80
